# 42

./: .gitignore  todo
CPP/: Makefile
CPP/CPP01/: Makefile
CPP/CPP03/: Makefile
CPP/CPP05/: Makefile
CPP/CPP06/: Makefile
CPP/CPP08/: Makefile
CPP/CPP09/: Makefile
common-core/ft_printf/: Makefile
common-core/get_next_line/: get_next_line_bonus.c  get_next_line_utils_bonus.c
common-core/inception/: env
common-core/libftV3/: Makefile
common-core/minishell/: minishell
fractol/: Makefile  a.out  events_manager.c  fract-ol  fractal_renderer.c  fractol.h  init.c  main.c
fractol/includes/: fractol.h
fractol/srcs/: coordinate_utils.c  (+8 more)
ft_printf/: Makefile  a.out  ft_printf.c
get_next_line/: a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.h  get_next_line_utils.c
libft/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
libftV3/: Makefile
pipex/: Makefile  bonus  debug  pipex
pipexv2/: 42  Makefile  debug  outfile  pipex
post-common-core/data/python-1/ex09/: pyproject.toml
post-common-core/data/python-1/ex09/ft_package/: utils.py
push_swap/: Makefile  debug  output  push_swap
(+564 files in other folders)
