[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
requires-python = ">=3"
authors = [
  {name="mmanuell", email="mmanuell@student.42.fr"}
]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/JVlatt/42.git"
